Fix check and radio alignment on dataset edit form

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -828,6 +828,12 @@ h3.footer-col-heading {
   text-decoration: underline;
 }
 
+
+/* Form Controls */
 .form-control {
   font-size: 1.8rem;
+}
+
+.form-check-input {
+  position: relative;
 }
